--- a/npo-ptnk.ru-v2/dostavka/index.html
+++ b/npo-ptnk.ru-v2/dostavka/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Оплата и доставка — НПО ПТНК</title>
+    <meta name="description" content="Оплата и доставка НПО ПТНК: условия сотрудничества, сроки, документы и логистика поставки по проекту." />
+    <link rel="icon" type="image/png" href="../images/small-logo.png" />
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../index.html">Главная</a>
@@ -44,7 +46,7 @@
               <p>Подготовили страницу для наполнения: способы оплаты, условия отгрузки, сроки, география и пакет документов.</p>
               <div class="hero-actions">
                 <a class="btn btn-primary" href="../kontakty/index.html">Запросить расчёт</a>
-                <a class="btn btn-secondary" href="../produktsiya/index.html">К продукции</a>
+                <a class="btn btn-secondary" href="../produktsiya/index.html" aria-label="Перейти к каталогу продукции">К продукции</a>
               </div>
             </div>
             <aside class="hero-card">
@@ -76,11 +78,11 @@
         <section class="section">
           <div class="grid grid-2">
             <div class="prose">
-              <h3 style="margin:0 0 10px">Доставка</h3>
+              <h3 class="u-mb-10">Доставка</h3>
               <p>Шаблон: доставка по России и СНГ. Возможен самовывоз. Доступны варианты автотранспортом/ТК/спецперевозка (указать).</p>
             </div>
             <div class="prose">
-              <h3 style="margin:0 0 10px">Сроки и документы</h3>
+              <h3 class="u-mb-10">Сроки и документы</h3>
               <p>Шаблон: срок изготовления зависит от типа конструкции и комплектации. Пакет документов: договор, спецификация, УПД/счёт‑фактура, паспорта/сертификаты (указать).</p>
             </div>
           </div>
@@ -89,7 +91,7 @@
         <section class="section">
           <div class="callout">
             <strong>Для расчёта доставки</strong> отправьте запрос с адресом разгрузки, контактами и ссылкой на интересующую продукцию.
-            <div style="margin-top:12px">
+            <div class="u-mt-12">
               <a class="btn btn-primary" href="../kontakty/index.html">Оставить запрос</a>
             </div>
           </div>
