--- a/npo-ptnk.ru-v2/index.html
+++ b/npo-ptnk.ru-v2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>НПО ПТНК — быстровозводимые тенто-каркасные комплексы</title>
     <meta name="description" content="Производство быстровозводимых, уникальных, всепогодных тенто-мобильных комплексов и сооружений." />
+    <link rel="icon" type="image/png" href="images/small-logo.png" />
     <link rel="stylesheet" href="assets/styles.css" />
     <script src="assets/main.js" defer></script>
   </head>
@@ -14,7 +15,7 @@
       <div class="container">
         <div class="header-bar">
           <a class="brand" href="index.html">
-            <img src="images/logo.png" alt="НПО ПТНК" />
+            <img src="images/logo.png" alt="НПО ПТНК" width="354" height="100" />
           </a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
@@ -90,7 +91,7 @@
           </div>
           <p class="video-caption">Видео‑презентация: нажмите для воспроизведения</p>
           <div class="video" aria-label="Видео">
-            <iframe src="https://rutube.ru/play/embed/9185568e815965e5b681affc023352f6/" allow="clipboard-write; autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe src="https://rutube.ru/play/embed/9185568e815965e5b681affc023352f6/" title="Видео-презентация НПО ПТНК" allow="clipboard-write; autoplay; fullscreen" allowfullscreen></iframe>
           </div>
         </section>
 
@@ -104,39 +105,39 @@
           </div>
           <div class="grid grid-4">
             <article class="card">
-              <div class="card-media"><img src="images/4.jpg" alt="Строительство крытых арен" loading="lazy" /></div>
+              <div class="card-media"><img src="images/4.jpg" alt="Строительство крытых арен" loading="lazy" width="750" height="280" decoding="async" /></div>
               <div class="card-body">
                 <span class="badge">Спортивные сооружения</span>
                 <h3>Ледовая арена круглогодичного использования</h3>
                 <p>Быстровозводимый утепленный сборно‑разборный комплекс.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="produktsiya/ledovaya-arena-kruglogodichnogo-ispolzovaniya/index.html">Подробнее</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="produktsiya/ledovaya-arena-kruglogodichnogo-ispolzovaniya/index.html" aria-label="Подробнее о ледовой арене круглогодичного использования">Подробнее</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="images/2.jpg" alt="Комплексы для хранения техники" loading="lazy" /></div>
+              <div class="card-media"><img src="images/2.jpg" alt="Комплексы для хранения техники" loading="lazy" width="360" height="279" decoding="async" /></div>
               <div class="card-body">
                 <span class="badge">Производственные сооружения</span>
                 <h3>Комплексы для хранения техники</h3>
                 <p>Тенто‑каркасные комплексы для хранения и обслуживания.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="produktsiya/avtomobilnyy-angar/index.html">Подробнее</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="produktsiya/avtomobilnyy-angar/index.html" aria-label="Подробнее о комплексах для хранения техники">Подробнее</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="images/m3.jpg" alt="КТОР АТ" loading="lazy" /></div>
+              <div class="card-media"><img src="images/m3.jpg" alt="КТОР АТ" loading="lazy" width="359" height="280" decoding="async" /></div>
               <div class="card-body">
                 <span class="badge">Авиация</span>
                 <h3>КТОР АТ</h3>
                 <p>Комплекс технического обслуживания, хранения и ремонта авиационной техники.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="produktsiya/ktor-at/index.html">Подробнее</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="produktsiya/ktor-at/index.html" aria-label="Подробнее о комплексе КТОР АТ">Подробнее</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="images/m1.jpg" alt="Тенто-каркасные комплексы" loading="lazy" /></div>
+              <div class="card-media"><img src="images/m1.jpg" alt="Тенто-каркасные комплексы" loading="lazy" width="359" height="591" decoding="async" /></div>
               <div class="card-body">
                 <span class="badge">Разное</span>
                 <h3>Тенто‑каркасные комплексы различного назначения</h3>
                 <p>Модульный принцип построения под широкий спектр задач.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="produktsiya/bystrovozvodimye-kompleksy/index.html">Подробнее</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="produktsiya/bystrovozvodimye-kompleksy/index.html" aria-label="Подробнее о быстровозводимых комплексах различного назначения">Подробнее</a></p>
               </div>
             </article>
           </div>
