--- a/npo-ptnk.ru-v2/kompaniya/index.html
+++ b/npo-ptnk.ru-v2/kompaniya/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Компания — НПО ПТНК</title>
+    <meta name="description" content="О компании НПО ПТНК: проектирование, производство и монтаж быстровозводимых тенто-каркасных комплексов." />
+    <link rel="icon" type="image/png" href="../images/small-logo.png" />
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../index.html">Главная</a>
@@ -56,7 +58,7 @@
           </div>
           <div class="grid grid-2 about-intro-grid">
             <div class="card about-media">
-              <div class="card-media"><img src="../images/foto3.jpg" alt="О компании НПО ПТНК" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/foto3.jpg" alt="О компании НПО ПТНК" loading="lazy" width="471" height="646" decoding="async" /></div>
             </div>
             <div class="about-content">
               <div class="prose">
