--- a/npo-ptnk.ru-v2/kontakty/index.html
+++ b/npo-ptnk.ru-v2/kontakty/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Контакты — НПО ПТНК</title>
+    <meta name="description" content="Контакты НПО ПТНК: телефон, email, адрес и реквизиты для запроса, заказа и консультации." />
+    <link rel="icon" type="image/png" href="../images/small-logo.png" />
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../index.html">Главная</a>
@@ -52,6 +54,7 @@
           <div class="video" aria-label="Карта">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d399864.4226981894!2d36.78247053062688!3d56.38227458089739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5ad47af83781b%3A0x9937816f2ec88a35!2zMjAwLCDQodC70L7QsdC-0LTQsCwg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC7LiwgMTQxNjQ0!5e0!3m2!1sru!2sru!4v1510844085904"
+              title="Карта офиса НПО ПТНК"
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
               allowfullscreen
@@ -63,7 +66,7 @@
             <p><strong>Адрес:</strong> 141644, Московская область, г.о. Клин, д. Слобода, д. 200, к. 1, оф. 202</p>
             <p><strong>Телефон:</strong> <a href="tel:+74959782917">+7 (495) 978‑29‑17</a></p>
             <p><strong>Email:</strong> <a href="mailto:ptktent@mail.ru">ptktent@mail.ru</a></p>
-            <div class="callout" style="margin-top:14px">
+            <div class="callout u-mt-14">
               <strong>Запрос/заказ:</strong> напишите письмо с описанием задачи и контактами — мы свяжемся с вами.
             </div>
           </div>
