--- a/npo-ptnk.ru-v2/produktsiya/avtomobilnyy-angar/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/avtomobilnyy-angar/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Комплексы для хранения техники — НПО ПТНК</title>
+    <meta name="description" content="Комплексы для хранения техники: быстровозводимые утепленные и неутепленные ангары НПО ПТНК." />
+    <link rel="icon" type="image/png" href="../../images/small-logo.png" />
     <link rel="stylesheet" href="../../assets/styles.css" />
     <script src="../../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../../index.html">Главная</a>
@@ -66,20 +68,20 @@
             </div>
           </div>
           <div class="gallery">
-            <a href="../../images/usl/angar/1.jpg"><img src="../../images/usl/angar/1.jpg" alt="Ангар — фото 1" loading="lazy" /></a>
-            <a href="../../images/usl/angar/2.jpg"><img src="../../images/usl/angar/2.jpg" alt="Ангар — фото 2" loading="lazy" /></a>
-            <a href="../../images/usl/angar/3.jpg"><img src="../../images/usl/angar/3.jpg" alt="Ангар — фото 3" loading="lazy" /></a>
-            <a href="../../images/usl/angar/4.jpg"><img src="../../images/usl/angar/4.jpg" alt="Ангар — фото 4" loading="lazy" /></a>
-            <a href="../../images/usl/angar/5.jpg"><img src="../../images/usl/angar/5.jpg" alt="Ангар — фото 5" loading="lazy" /></a>
-            <a href="../../images/usl/angar/6.jpg"><img src="../../images/usl/angar/6.jpg" alt="Ангар — фото 6" loading="lazy" /></a>
-            <a href="../../images/usl/angar/7.jpg"><img src="../../images/usl/angar/7.jpg" alt="Ангар — фото 7" loading="lazy" /></a>
-            <a href="../../images/usl/angar/8.jpg"><img src="../../images/usl/angar/8.jpg" alt="Ангар — фото 8" loading="lazy" /></a>
-            <a href="../../images/usl/angar/9.jpg"><img src="../../images/usl/angar/9.jpg" alt="Ангар — фото 9" loading="lazy" /></a>
-            <a href="../../images/usl/angar/10.jpg"><img src="../../images/usl/angar/10.jpg" alt="Ангар — фото 10" loading="lazy" /></a>
-            <a href="../../images/usl/angar/11.jpg"><img src="../../images/usl/angar/11.jpg" alt="Ангар — фото 11" loading="lazy" /></a>
-            <a href="../../images/usl/angar/12.jpg"><img src="../../images/usl/angar/12.jpg" alt="Ангар — фото 12" loading="lazy" /></a>
-            <a href="../../images/usl/angar/13.jpg"><img src="../../images/usl/angar/13.jpg" alt="Ангар — фото 13" loading="lazy" /></a>
-            <a href="../../images/usl/angar/14.jpg"><img src="../../images/usl/angar/14.jpg" alt="Ангар — фото 14" loading="lazy" /></a>
+            <a href="../../images/usl/angar/1.jpg"><img src="../../images/usl/angar/1.jpg" alt="Ангар — фото 1" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/2.jpg"><img src="../../images/usl/angar/2.jpg" alt="Ангар — фото 2" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/3.jpg"><img src="../../images/usl/angar/3.jpg" alt="Ангар — фото 3" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/4.jpg"><img src="../../images/usl/angar/4.jpg" alt="Ангар — фото 4" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/5.jpg"><img src="../../images/usl/angar/5.jpg" alt="Ангар — фото 5" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/6.jpg"><img src="../../images/usl/angar/6.jpg" alt="Ангар — фото 6" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/7.jpg"><img src="../../images/usl/angar/7.jpg" alt="Ангар — фото 7" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/8.jpg"><img src="../../images/usl/angar/8.jpg" alt="Ангар — фото 8" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/9.jpg"><img src="../../images/usl/angar/9.jpg" alt="Ангар — фото 9" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/10.jpg"><img src="../../images/usl/angar/10.jpg" alt="Ангар — фото 10" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/11.jpg"><img src="../../images/usl/angar/11.jpg" alt="Ангар — фото 11" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/12.jpg"><img src="../../images/usl/angar/12.jpg" alt="Ангар — фото 12" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/13.jpg"><img src="../../images/usl/angar/13.jpg" alt="Ангар — фото 13" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/angar/14.jpg"><img src="../../images/usl/angar/14.jpg" alt="Ангар — фото 14" loading="lazy" width="462" height="402" decoding="async" /></a>
           </div>
         </section>
       </div>
