--- a/npo-ptnk.ru-v2/produktsiya/bystrovozvodimye-kompleksy/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/bystrovozvodimye-kompleksy/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Быстровозводимые комплексы — НПО ПТНК</title>
+    <meta name="description" content="Быстровозводимые комплексы различного назначения: модульные тенто-каркасные решения НПО ПТНК." />
+    <link rel="icon" type="image/png" href="../../images/small-logo.png" />
     <link rel="stylesheet" href="../../assets/styles.css" />
     <script src="../../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../../index.html">Главная</a>
@@ -70,7 +72,7 @@
             </ul>
           </div>
           <div class="card">
-            <div class="card-media"><img src="../../images/usl/raznoe/1.jpg" alt="Комплекс — пример" loading="lazy" /></div>
+            <div class="card-media"><img src="../../images/usl/raznoe/1.jpg" alt="Комплекс — пример" loading="lazy" width="462" height="402" decoding="async" /></div>
             <div class="card-body">
               <span class="badge">Галерея</span>
               <h3>Примеры сооружений</h3>
@@ -81,12 +83,12 @@
 
         <section class="section">
           <div class="gallery">
-            <a href="../../images/usl/raznoe/1.jpg"><img src="../../images/usl/raznoe/1.jpg" alt="Комплекс — фото 1" loading="lazy" /></a>
-            <a href="../../images/usl/raznoe/2.jpg"><img src="../../images/usl/raznoe/2.jpg" alt="Комплекс — фото 2" loading="lazy" /></a>
-            <a href="../../images/usl/raznoe/3.jpg"><img src="../../images/usl/raznoe/3.jpg" alt="Комплекс — фото 3" loading="lazy" /></a>
-            <a href="../../images/usl/raznoe/4.jpg"><img src="../../images/usl/raznoe/4.jpg" alt="Комплекс — фото 4" loading="lazy" /></a>
-            <a href="../../images/usl/raznoe/5.jpg"><img src="../../images/usl/raznoe/5.jpg" alt="Комплекс — фото 5" loading="lazy" /></a>
-            <a href="../../images/usl/raznoe/6.jpg"><img src="../../images/usl/raznoe/6.jpg" alt="Комплекс — фото 6" loading="lazy" /></a>
+            <a href="../../images/usl/raznoe/1.jpg"><img src="../../images/usl/raznoe/1.jpg" alt="Комплекс — фото 1" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/raznoe/2.jpg"><img src="../../images/usl/raznoe/2.jpg" alt="Комплекс — фото 2" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/raznoe/3.jpg"><img src="../../images/usl/raznoe/3.jpg" alt="Комплекс — фото 3" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/raznoe/4.jpg"><img src="../../images/usl/raznoe/4.jpg" alt="Комплекс — фото 4" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/raznoe/5.jpg"><img src="../../images/usl/raznoe/5.jpg" alt="Комплекс — фото 5" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/raznoe/6.jpg"><img src="../../images/usl/raznoe/6.jpg" alt="Комплекс — фото 6" loading="lazy" width="462" height="402" decoding="async" /></a>
           </div>
         </section>
       </div>
