--- a/npo-ptnk.ru-v2/produktsiya/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Продукция — НПО ПТНК</title>
+    <meta name="description" content="Продукция НПО ПТНК: спортивные и производственные тенто-каркасные комплексы для круглогодичной эксплуатации." />
+    <link rel="icon" type="image/png" href="../images/small-logo.png" />
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../index.html">Главная</a>
@@ -45,13 +47,6 @@
           </div>
         </section>
 
-        <section class="section empty-state" aria-label="Раздел в разработке">
-          <div class="callout empty-state-card">
-            <h2>Товары появятся позже</h2>
-            <p>Сейчас раздел в разработке.</p>
-          </div>
-        </section>
-
         <section class="section">
           <div class="section-head">
             <div>
@@ -61,27 +56,27 @@
           </div>
           <div class="grid grid-3">
             <article class="card">
-              <div class="card-media"><img src="../images/pr1.jpg" alt="Ледовая арена" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/pr1.jpg" alt="Ледовая арена" loading="lazy" width="359" height="280" decoding="async" /></div>
               <div class="card-body">
                 <h3>Ледовая арена круглогодичного использования</h3>
                 <p>Быстровозводимый утепленный сборно‑разборный комплекс.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../kontakty/index.html" aria-label="Запросить информацию о ледовой арене круглогодичного использования">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="../images/pr4.jpg" alt="Сезонные ледовые площадки" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/pr4.jpg" alt="Сезонные ледовые площадки" loading="lazy" width="359" height="280" decoding="async" /></div>
               <div class="card-body">
                 <h3>Сезонные ледовые площадки</h3>
                 <p>Быстровозводимый сборно‑разборный комплекс (покрытие) для сезонных ледовых площадок.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../kontakty/index.html" aria-label="Запросить информацию о сезонных ледовых площадках">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="../images/pr2.jpg" alt="Спортзалы и спортивные площадки" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/pr2.jpg" alt="Спортзалы и спортивные площадки" loading="lazy" width="359" height="280" decoding="async" /></div>
               <div class="card-body">
                 <h3>Спортзалы и спортивные площадки</h3>
                 <p>Быстровозводимые сборно‑разборные покрытия для спортивных площадок.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../kontakty/index.html" aria-label="Запросить информацию о спортзалах и спортивных площадках">Запросить информацию</a></p>
               </div>
             </article>
           </div>
@@ -96,27 +91,27 @@
           </div>
           <div class="grid grid-3">
             <article class="card">
-              <div class="card-media"><img src="../images/pr2_1.jpg" alt="КТОР АТ" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/pr2_1.jpg" alt="КТОР АТ" loading="lazy" width="359" height="280" decoding="async" /></div>
               <div class="card-body">
                 <h3>КТОР АТ</h3>
                 <p>Комплекс технического обслуживания, хранения и ремонта авиационной техники.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../kontakty/index.html" aria-label="Запросить информацию о комплексе КТОР АТ">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="../images/pr5.jpg" alt="Комплексы для хранения техники" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/pr5.jpg" alt="Комплексы для хранения техники" loading="lazy" width="359" height="280" decoding="async" /></div>
               <div class="card-body">
                 <h3>Комплексы для хранения техники</h3>
                 <p>Утепленные и неутепленные тенто‑каркасные комплексы для хранения и обслуживания.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../kontakty/index.html" aria-label="Запросить информацию о комплексах для хранения техники">Запросить информацию</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="../images/pr6.jpg" alt="Быстровозводимые комплексы" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/pr6.jpg" alt="Быстровозводимые комплексы" loading="lazy" width="359" height="280" decoding="async" /></div>
               <div class="card-body">
                 <h3>Быстровозводимые комплексы различного назначения</h3>
                 <p>Модульный принцип построения под широкий спектр задач.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../kontakty/index.html">Запросить информацию</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../kontakty/index.html" aria-label="Запросить информацию о быстровозводимых комплексах различного назначения">Запросить информацию</a></p>
               </div>
             </article>
           </div>
