--- a/npo-ptnk.ru-v2/produktsiya/sezonnye-ledovye-ploshchadki/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/sezonnye-ledovye-ploshchadki/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Сезонные ледовые площадки — НПО ПТНК</title>
+    <meta name="description" content="Сезонные ледовые площадки: быстровозводимые покрытия и комплексы для сезонной эксплуатации." />
+    <link rel="icon" type="image/png" href="../../images/small-logo.png" />
     <link rel="stylesheet" href="../../assets/styles.css" />
     <script src="../../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../../index.html">Главная</a>
@@ -63,7 +65,7 @@
             <p>Установка быстровозводимых сборно‑разборных комплексов (покрытий) для сезонных ледовых площадок позволяет защитить их от внешних атмосферных воздействий (снега, ветра) и создать более комфортные условия эксплуатации.</p>
           </div>
           <div class="card">
-            <div class="card-media"><img src="../../images/usl/sezon/1.jpg" alt="Сезонная площадка — пример" loading="lazy" /></div>
+            <div class="card-media"><img src="../../images/usl/sezon/1.jpg" alt="Сезонная площадка — пример" loading="lazy" width="462" height="402" decoding="async" /></div>
             <div class="card-body">
               <span class="badge">Галерея</span>
               <h3>Фотографии</h3>
@@ -74,8 +76,8 @@
 
         <section class="section">
           <div class="gallery">
-            <a href="../../images/usl/sezon/1.jpg"><img src="../../images/usl/sezon/1.jpg" alt="Сезонная площадка — фото 1" loading="lazy" /></a>
-            <a href="../../images/usl/sezon/2.jpg"><img src="../../images/usl/sezon/2.jpg" alt="Сезонная площадка — фото 2" loading="lazy" /></a>
+            <a href="../../images/usl/sezon/1.jpg"><img src="../../images/usl/sezon/1.jpg" alt="Сезонная площадка — фото 1" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sezon/2.jpg"><img src="../../images/usl/sezon/2.jpg" alt="Сезонная площадка — фото 2" loading="lazy" width="462" height="402" decoding="async" /></a>
           </div>
         </section>
       </div>
