--- a/npo-ptnk.ru-v2/produktsiya/sportzaly-i-sportivnye-ploshchadki/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/sportzaly-i-sportivnye-ploshchadki/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Спортзалы и спортивные площадки — НПО ПТНК</title>
+    <meta name="description" content="Спортзалы и спортивные площадки: быстровозводимые тенто-каркасные покрытия для спорта и тренировок." />
+    <link rel="icon" type="image/png" href="../../images/small-logo.png" />
     <link rel="stylesheet" href="../../assets/styles.css" />
     <script src="../../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../../index.html">Главная</a>
@@ -64,7 +66,7 @@
             <p>В случае необходимости возможна разработка и установка мобильного тенто‑каркасного покрытия общего для спортивных площадок различного назначения: ледовая арена и баскетбольный (волейбольный) зал.</p>
           </div>
           <div class="card">
-            <div class="card-media"><img src="../../images/usl/sport_zal/1.jpg" alt="Спортивная площадка — пример" loading="lazy" /></div>
+            <div class="card-media"><img src="../../images/usl/sport_zal/1.jpg" alt="Спортивная площадка — пример" loading="lazy" width="462" height="402" decoding="async" /></div>
             <div class="card-body">
               <span class="badge">Галерея</span>
               <h3>Фотографии</h3>
@@ -75,14 +77,14 @@
 
         <section class="section">
           <div class="gallery">
-            <a href="../../images/usl/sport_zal/1.jpg"><img src="../../images/usl/sport_zal/1.jpg" alt="Спорт — фото 1" loading="lazy" /></a>
-            <a href="../../images/usl/sport_zal/2.jpg"><img src="../../images/usl/sport_zal/2.jpg" alt="Спорт — фото 2" loading="lazy" /></a>
-            <a href="../../images/usl/sport_zal/3.jpg"><img src="../../images/usl/sport_zal/3.jpg" alt="Спорт — фото 3" loading="lazy" /></a>
-            <a href="../../images/usl/sport_zal/4.jpg"><img src="../../images/usl/sport_zal/4.jpg" alt="Спорт — фото 4" loading="lazy" /></a>
-            <a href="../../images/usl/sport_zal/5.jpg"><img src="../../images/usl/sport_zal/5.jpg" alt="Спорт — фото 5" loading="lazy" /></a>
-            <a href="../../images/usl/sport_zal/6.jpg"><img src="../../images/usl/sport_zal/6.jpg" alt="Спорт — фото 6" loading="lazy" /></a>
-            <a href="../../images/usl/sport_zal/7.jpg"><img src="../../images/usl/sport_zal/7.jpg" alt="Спорт — фото 7" loading="lazy" /></a>
-            <a href="../../images/usl/sport_zal/8.jpg"><img src="../../images/usl/sport_zal/8.jpg" alt="Спорт — фото 8" loading="lazy" /></a>
+            <a href="../../images/usl/sport_zal/1.jpg"><img src="../../images/usl/sport_zal/1.jpg" alt="Спорт — фото 1" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sport_zal/2.jpg"><img src="../../images/usl/sport_zal/2.jpg" alt="Спорт — фото 2" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sport_zal/3.jpg"><img src="../../images/usl/sport_zal/3.jpg" alt="Спорт — фото 3" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sport_zal/4.jpg"><img src="../../images/usl/sport_zal/4.jpg" alt="Спорт — фото 4" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sport_zal/5.jpg"><img src="../../images/usl/sport_zal/5.jpg" alt="Спорт — фото 5" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sport_zal/6.jpg"><img src="../../images/usl/sport_zal/6.jpg" alt="Спорт — фото 6" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sport_zal/7.jpg"><img src="../../images/usl/sport_zal/7.jpg" alt="Спорт — фото 7" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/sport_zal/8.jpg"><img src="../../images/usl/sport_zal/8.jpg" alt="Спорт — фото 8" loading="lazy" width="462" height="402" decoding="async" /></a>
           </div>
         </section>
       </div>
