--- a/npo-ptnk.ru-v2/uslugi/index.html
+++ b/npo-ptnk.ru-v2/uslugi/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Услуги — НПО ПТНК</title>
+    <meta name="description" content="Услуги НПО ПТНК: проектирование, изготовление, монтаж и адаптация тенто-каркасных сооружений под задачи заказчика." />
+    <link rel="icon" type="image/png" href="../images/small-logo.png" />
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../index.html">Главная</a>
@@ -58,35 +60,35 @@
         <section class="section">
           <div class="grid grid-2">
             <article class="card">
-              <div class="card-media"><img src="../images/us1.jpg" alt="Проектирование сооружений" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/us1.jpg" alt="Проектирование сооружений" loading="lazy" width="550" height="320" decoding="async" /></div>
               <div class="card-body">
                 <h3>Проектирование сооружений</h3>
                 <p>Производство и установка комплексов в соответствии с проектной документацией. При комплексном договоре разработка проектной документации может осуществляться бесплатно.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../produktsiya/index.html">К продукции</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../produktsiya/index.html" aria-label="К продукции: проектирование сооружений">К продукции</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="../images/us2.jpg" alt="Полное оснащение" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/us2.jpg" alt="Полное оснащение" loading="lazy" width="550" height="320" decoding="async" /></div>
               <div class="card-body">
                 <h3>Полное оснащение</h3>
                 <p>Установка комплексов «под ключ», с оснащением инженерным оборудованием (в т.ч. для крытых ледовых арен) для соблюдения ледовой технологии.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../produktsiya/index.html">К продукции</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../produktsiya/index.html" aria-label="К продукции: полное оснащение">К продукции</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="../images/us3.jpg" alt="Комплексное строительство" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/us3.jpg" alt="Комплексное строительство" loading="lazy" width="550" height="320" decoding="async" /></div>
               <div class="card-body">
                 <h3>Комплексное строительство</h3>
                 <p>Полный комплекс работ: от освоения площадки до установки готового к эксплуатации тенто‑каркасного комплекса.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../produktsiya/index.html">К продукции</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../produktsiya/index.html" aria-label="К продукции: комплексное строительство">К продукции</a></p>
               </div>
             </article>
             <article class="card">
-              <div class="card-media"><img src="../images/us4.jpg" alt="Нестандартные конструкции" loading="lazy" /></div>
+              <div class="card-media"><img src="../images/us4.jpg" alt="Нестандартные конструкции" loading="lazy" width="550" height="320" decoding="async" /></div>
               <div class="card-body">
                 <h3>Нестандартные конструкции</h3>
                 <p>Не ограничены типоразмерами: готовы изготовить и установить комплекс любого размера и конфигурации с учетом пожеланий заказчика.</p>
-                <p style="margin-top:12px"><a class="btn btn-secondary" href="../produktsiya/index.html">К продукции</a></p>
+                <p class="u-mt-12"><a class="btn btn-secondary" href="../produktsiya/index.html" aria-label="К продукции: нестандартные конструкции">К продукции</a></p>
               </div>
             </article>
           </div>
