--- a/npo-ptnk.ru-v2/zashchita-ot-bpla-i-dronov/index.html
+++ b/npo-ptnk.ru-v2/zashchita-ot-bpla-i-dronov/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Защита от БПЛА — НПО ПТНК</title>
+    <meta name="description" content="Физическая защита инфраструктурных объектов от атак БПЛА: быстровозводимые сборно-разборные защитные комплексы." />
+    <link rel="icon" type="image/png" href="../images/small-logo.png" />
     <link rel="stylesheet" href="../assets/styles.css" />
     <script src="../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../index.html"><img src="../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../index.html">Главная</a>
@@ -46,30 +48,30 @@
         <section class="section">
           <div class="carousel" data-carousel aria-label="Галерея">
             <div class="carousel-track" data-carousel-track tabindex="0">
-              <div class="carousel-slide"><img src="../upload/medialibrary/1ba/1ba6b85861a11eb6c6738bafe354fd23.jpg" alt="Слайд 1" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/86f/86ffd20ee44382271e7b84aeeeb439c8.jpg" alt="Слайд 2" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/393/393b0a386eb9cf670149f95b8097a3a7.jpg" alt="Слайд 3" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/046/046803410fe71cfa90d216b6e099d01b.jpg" alt="Слайд 4" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/ff9/ff918af2b80d8cd394a288516ad90127.jpg" alt="Слайд 5" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/384/384418ac44f49a682d7c870c1fa49d56.jpg" alt="Слайд 6" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/4ac/4ace18acf7d7fd92adcff63e17ef2813.jpg" alt="Слайд 7" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/95b/95b11626eb44c6f099ab93293b5879bd.jpg" alt="Слайд 8" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/ed8/ed8dd0a308851a1f1b686d664d4f4de7.jpg" alt="Слайд 9" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/d68/d6811931c62966788e4ed3bfc823584f.jpg" alt="Слайд 10" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/7b6/7b6bb3f1a23dc8a9e43f38346c1c1ba0.jpg" alt="Слайд 11" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/d8b/d8bd82a78c84d717cf016cf0e5abb798.jpg" alt="Слайд 12" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/6e9/6e9a5fb1f24fd2aa78691981946b4e23.jpg" alt="Слайд 13" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/3ec/3ec74689f96391a59774d6728c56b668.jpg" alt="Слайд 14" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/f0c/f0c68220755e24b47cc87a0afaab8bd1.jpg" alt="Слайд 15" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/713/7133fe6f2b7436a967ecf5557680a44a.jpg" alt="Слайд 16" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/5b0/5b0f6501564a9bd524973d71edab82a7.jpg" alt="Слайд 17" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/d92/d92a4bc12904cedebd1c4bcaac759da4.jpg" alt="Слайд 18" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/8e7/8e76d4f0ed9631329d417fe8dc04642b.jpg" alt="Слайд 19" loading="lazy" /></div>
-              <div class="carousel-slide"><img src="../upload/medialibrary/ec8/ec814e880d6f51b62ff6e00131903af1.jpg" alt="Слайд 20" loading="lazy" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/1ba/1ba6b85861a11eb6c6738bafe354fd23.jpg" alt="Слайд 1" loading="lazy" width="1024" height="768" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/86f/86ffd20ee44382271e7b84aeeeb439c8.jpg" alt="Слайд 2" loading="lazy" width="996" height="747" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/393/393b0a386eb9cf670149f95b8097a3a7.jpg" alt="Слайд 3" loading="lazy" width="998" height="747" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/046/046803410fe71cfa90d216b6e099d01b.jpg" alt="Слайд 4" loading="lazy" width="996" height="746" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/ff9/ff918af2b80d8cd394a288516ad90127.jpg" alt="Слайд 5" loading="lazy" width="995" height="746" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/384/384418ac44f49a682d7c870c1fa49d56.jpg" alt="Слайд 6" loading="lazy" width="995" height="748" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/4ac/4ace18acf7d7fd92adcff63e17ef2813.jpg" alt="Слайд 7" loading="lazy" width="993" height="744" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/95b/95b11626eb44c6f099ab93293b5879bd.jpg" alt="Слайд 8" loading="lazy" width="993" height="748" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/ed8/ed8dd0a308851a1f1b686d664d4f4de7.jpg" alt="Слайд 9" loading="lazy" width="996" height="748" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/d68/d6811931c62966788e4ed3bfc823584f.jpg" alt="Слайд 10" loading="lazy" width="993" height="744" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/7b6/7b6bb3f1a23dc8a9e43f38346c1c1ba0.jpg" alt="Слайд 11" loading="lazy" width="996" height="748" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/d8b/d8bd82a78c84d717cf016cf0e5abb798.jpg" alt="Слайд 12" loading="lazy" width="993" height="745" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/6e9/6e9a5fb1f24fd2aa78691981946b4e23.jpg" alt="Слайд 13" loading="lazy" width="996" height="746" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/3ec/3ec74689f96391a59774d6728c56b668.jpg" alt="Слайд 14" loading="lazy" width="995" height="745" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/f0c/f0c68220755e24b47cc87a0afaab8bd1.jpg" alt="Слайд 15" loading="lazy" width="998" height="744" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/713/7133fe6f2b7436a967ecf5557680a44a.jpg" alt="Слайд 16" loading="lazy" width="994" height="744" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/5b0/5b0f6501564a9bd524973d71edab82a7.jpg" alt="Слайд 17" loading="lazy" width="997" height="748" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/d92/d92a4bc12904cedebd1c4bcaac759da4.jpg" alt="Слайд 18" loading="lazy" width="995" height="747" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/8e7/8e76d4f0ed9631329d417fe8dc04642b.jpg" alt="Слайд 19" loading="lazy" width="996" height="748" decoding="async" /></div>
+              <div class="carousel-slide"><img src="../upload/medialibrary/ec8/ec814e880d6f51b62ff6e00131903af1.jpg" alt="Слайд 20" loading="lazy" width="998" height="748" decoding="async" /></div>
             </div>
             <button class="carousel-btn carousel-btn-prev" type="button" data-carousel-prev aria-label="Предыдущая фотография">‹</button>
             <button class="carousel-btn carousel-btn-next" type="button" data-carousel-next aria-label="Следующая фотография">›</button>
-            <div class="carousel-count" data-carousel-count aria-hidden="true"></div>
+            <div class="carousel-count" data-carousel-count role="status" aria-live="polite" aria-atomic="true"></div>
           </div>
         </section>
       </div>
