--- a/npo-ptnk.ru-v2/produktsiya/ktor-at/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/ktor-at/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>КТОР АТ — НПО ПТНК</title>
+    <meta name="description" content="КТОР АТ: комплекс технического обслуживания, хранения и ремонта авиационной техники." />
+    <link rel="icon" type="image/png" href="../../images/small-logo.png" />
     <link rel="stylesheet" href="../../assets/styles.css" />
     <script src="../../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../../index.html">Главная</a>
@@ -66,7 +68,7 @@
             <p>Комплекс успешно прошел государственную экспертизу в 13 НИИ ВВС на возможность применения в ВВС РФ.</p>
           </div>
           <div class="card">
-            <div class="card-media"><img src="../../images/usl/ktor/1.jpg" alt="КТОР АТ — пример" loading="lazy" /></div>
+            <div class="card-media"><img src="../../images/usl/ktor/1.jpg" alt="КТОР АТ — пример" loading="lazy" width="462" height="402" decoding="async" /></div>
             <div class="card-body">
               <span class="badge">Галерея</span>
               <h3>Фотографии</h3>
@@ -77,15 +79,15 @@
 
         <section class="section">
           <div class="gallery">
-            <a href="../../images/usl/ktor/1.jpg"><img src="../../images/usl/ktor/1.jpg" alt="КТОР АТ — фото 1" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/2.jpg"><img src="../../images/usl/ktor/2.jpg" alt="КТОР АТ — фото 2" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/3.jpg"><img src="../../images/usl/ktor/3.jpg" alt="КТОР АТ — фото 3" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/4.jpg"><img src="../../images/usl/ktor/4.jpg" alt="КТОР АТ — фото 4" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/5.jpg"><img src="../../images/usl/ktor/5.jpg" alt="КТОР АТ — фото 5" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/6.jpg"><img src="../../images/usl/ktor/6.jpg" alt="КТОР АТ — фото 6" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/7.jpg"><img src="../../images/usl/ktor/7.jpg" alt="КТОР АТ — фото 7" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/8.jpg"><img src="../../images/usl/ktor/8.jpg" alt="КТОР АТ — фото 8" loading="lazy" /></a>
-            <a href="../../images/usl/ktor/9.jpg"><img src="../../images/usl/ktor/9.jpg" alt="КТОР АТ — фото 9" loading="lazy" /></a>
+            <a href="../../images/usl/ktor/1.jpg"><img src="../../images/usl/ktor/1.jpg" alt="КТОР АТ — фото 1" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/2.jpg"><img src="../../images/usl/ktor/2.jpg" alt="КТОР АТ — фото 2" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/3.jpg"><img src="../../images/usl/ktor/3.jpg" alt="КТОР АТ — фото 3" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/4.jpg"><img src="../../images/usl/ktor/4.jpg" alt="КТОР АТ — фото 4" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/5.jpg"><img src="../../images/usl/ktor/5.jpg" alt="КТОР АТ — фото 5" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/6.jpg"><img src="../../images/usl/ktor/6.jpg" alt="КТОР АТ — фото 6" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/7.jpg"><img src="../../images/usl/ktor/7.jpg" alt="КТОР АТ — фото 7" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/8.jpg"><img src="../../images/usl/ktor/8.jpg" alt="КТОР АТ — фото 8" loading="lazy" width="462" height="402" decoding="async" /></a>
+            <a href="../../images/usl/ktor/9.jpg"><img src="../../images/usl/ktor/9.jpg" alt="КТОР АТ — фото 9" loading="lazy" width="462" height="402" decoding="async" /></a>
           </div>
         </section>
       </div>
