--- a/npo-ptnk.ru-v2/produktsiya/ledovaya-arena-kruglogodichnogo-ispolzovaniya/index.html
+++ b/npo-ptnk.ru-v2/produktsiya/ledovaya-arena-kruglogodichnogo-ispolzovaniya/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ледовая арена — НПО ПТНК</title>
+    <meta name="description" content="Ледовая арена круглогодичного использования: быстровозводимый утепленный сборно-разборный комплекс." />
+    <link rel="icon" type="image/png" href="../../images/small-logo.png" />
     <link rel="stylesheet" href="../../assets/styles.css" />
     <script src="../../assets/main.js" defer></script>
   </head>
@@ -12,7 +14,7 @@
     <header class="site-header">
       <div class="container">
         <div class="header-bar">
-          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" /></a>
+          <a class="brand" href="../../index.html"><img src="../../images/logo.png" alt="НПО ПТНК" width="354" height="100" /></a>
           <button class="nav-toggle" type="button" data-nav-toggle aria-controls="site-nav" aria-expanded="false">Меню</button>
           <nav id="site-nav" class="nav" data-nav>
             <a href="../../index.html">Главная</a>
@@ -65,7 +67,7 @@
             <p>Спортивная термоарена может быть смонтирована в комплекте с необходимым оборудованием «под ключ» в течение 2–3 месяцев.</p>
           </div>
           <div class="card">
-            <div class="card-media"><img src="../../images/usl/led_arena/1.jpg" alt="Ледовая арена — пример" loading="lazy" /></div>
+            <div class="card-media"><img src="../../images/usl/led_arena/1.jpg" alt="Ледовая арена — пример" loading="lazy" width="429" height="400" decoding="async" /></div>
             <div class="card-body">
               <span class="badge">Галерея</span>
               <h3>Фотографии</h3>
@@ -76,18 +78,18 @@
 
         <section class="section">
           <div class="gallery">
-            <a href="../../images/usl/led_arena/1.jpg"><img src="../../images/usl/led_arena/1.jpg" alt="Ледовая арена — фото 1" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/1/1.jpg"><img src="../../images/usl/led_arena/1/1.jpg" alt="Ледовая арена — фото 2" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/1/2.jpg"><img src="../../images/usl/led_arena/1/2.jpg" alt="Ледовая арена — фото 3" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/1/3.jpg"><img src="../../images/usl/led_arena/1/3.jpg" alt="Ледовая арена — фото 4" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/1/4.jpg"><img src="../../images/usl/led_arena/1/4.jpg" alt="Ледовая арена — фото 5" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/1/5.jpg"><img src="../../images/usl/led_arena/1/5.jpg" alt="Ледовая арена — фото 6" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/1/6.jpg"><img src="../../images/usl/led_arena/1/6.jpg" alt="Ледовая арена — фото 7" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/1/7.jpg"><img src="../../images/usl/led_arena/1/7.jpg" alt="Ледовая арена — фото 8" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/8.jpg"><img src="../../images/usl/led_arena/8.jpg" alt="Ледовая арена — фото 9" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/9.jpg"><img src="../../images/usl/led_arena/9.jpg" alt="Ледовая арена — фото 10" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/10.jpg"><img src="../../images/usl/led_arena/10.jpg" alt="Ледовая арена — фото 11" loading="lazy" /></a>
-            <a href="../../images/usl/led_arena/11.jpg"><img src="../../images/usl/led_arena/11.jpg" alt="Ледовая арена — фото 12" loading="lazy" /></a>
+            <a href="../../images/usl/led_arena/1.jpg"><img src="../../images/usl/led_arena/1.jpg" alt="Ледовая арена — фото 1" loading="lazy" width="429" height="400" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/1/1.jpg"><img src="../../images/usl/led_arena/1/1.jpg" alt="Ледовая арена — фото 2" loading="lazy" width="1140" height="281" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/1/2.jpg"><img src="../../images/usl/led_arena/1/2.jpg" alt="Ледовая арена — фото 3" loading="lazy" width="1140" height="281" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/1/3.jpg"><img src="../../images/usl/led_arena/1/3.jpg" alt="Ледовая арена — фото 4" loading="lazy" width="1140" height="281" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/1/4.jpg"><img src="../../images/usl/led_arena/1/4.jpg" alt="Ледовая арена — фото 5" loading="lazy" width="1140" height="281" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/1/5.jpg"><img src="../../images/usl/led_arena/1/5.jpg" alt="Ледовая арена — фото 6" loading="lazy" width="1140" height="281" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/1/6.jpg"><img src="../../images/usl/led_arena/1/6.jpg" alt="Ледовая арена — фото 7" loading="lazy" width="1140" height="281" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/1/7.jpg"><img src="../../images/usl/led_arena/1/7.jpg" alt="Ледовая арена — фото 8" loading="lazy" width="1140" height="281" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/8.jpg"><img src="../../images/usl/led_arena/8.jpg" alt="Ледовая арена — фото 9" loading="lazy" width="360" height="280" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/9.jpg"><img src="../../images/usl/led_arena/9.jpg" alt="Ледовая арена — фото 10" loading="lazy" width="360" height="280" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/10.jpg"><img src="../../images/usl/led_arena/10.jpg" alt="Ледовая арена — фото 11" loading="lazy" width="360" height="280" decoding="async" /></a>
+            <a href="../../images/usl/led_arena/11.jpg"><img src="../../images/usl/led_arena/11.jpg" alt="Ледовая арена — фото 12" loading="lazy" width="360" height="280" decoding="async" /></a>
           </div>
         </section>
       </div>
